--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vcc-loader",
   "productName": "VCC Loader",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "main": "src/main.js",
   "author": "NovaVoidHowl",
   "description": "",
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "node-persist": "^4.0.3",
+    "semver": "^7.6.3",
     "sudo-prompt": "^9.2.1"
   },
   "build": {
