--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vcc-loader",
   "productName": "VCC Loader",
-  "version": "0.8.5",
+  "version": "0.9.0",
   "main": "src/main.js",
   "author": "NovaVoidHowl",
   "description": "",
@@ -29,7 +29,8 @@
   "dependencies": {
     "node-persist": "^4.0.3",
     "semver": "^7.6.3",
-    "sudo-prompt": "^9.2.1"
+    "sudo-prompt": "^9.2.1",
+    "win-version-info": "^6.0.1"
   },
   "build": {
     "appId": "com.novavoidhowl.vccloader",
