--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,18 @@
 {
-    "cSpell.words": [
-        "deeplinking"
-    ],
-    // set tab size to 2 spaces
-    "editor.tabSize": 2,
-    // set use spaces for indentation
-    "editor.insertSpaces": true,
-
-    "editor.rulers": [120],
+  "cSpell.words": [
+    "autofix",
+    "deeplink",
+    "deeplinking",
+    "frontmatter",
+    "mdformat",
+    "novavoidhowl",
+    "nsis",
+    "rcompare",
+    "vccloader"
+  ],
+  "editor.insertSpaces": true,
+  "editor.rulers": [
+    120
+  ],
+  "editor.tabSize": 2
 }
